src/snapshots/jk__app__tests__snapshot_renders_abandon_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Abandon Result
==============

Summary: Abandoned 1 commits.

Abandoned 1 commits.

Tip: run `log`, `status`, or `diff` to verify the resulting history
