src/snapshots/jk__app__tests__snapshot_renders_absorb_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Absorb Result
=============

Summary: Absorbed changes into 2 destination commits

Absorbed changes into 2 destination commits

Tip: run `log`, `status`, or `diff` to verify the resulting history
