src/snapshots/jk__app__tests__snapshot_renders_bookmark_create_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark Create
================

Summary: 1 output line

Created bookmark feature at abcdef12

Tip: run `bookmark list` to verify bookmark state
