src/snapshots/jk__app__tests__snapshot_renders_bookmark_delete_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark Delete
================

Summary: 1 output line

Deleted bookmark stale-feature

Tip: run `bookmark list` to verify bookmark state
