src/snapshots/jk__app__tests__snapshot_renders_bookmark_forget_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark Forget
================

Summary: 1 output line

Forgot bookmark stale-feature@origin

Tip: run `bookmark list` to verify bookmark state
