src/snapshots/jk__app__tests__snapshot_renders_bookmark_list_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark List
=============

main: abcdef12
feature: 0123abcd

Tip: use `bookmark set/move/track` flows from normal mode or `:`
