src/snapshots/jk__app__tests__snapshot_renders_bookmark_rename_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark Rename
================

Summary: 1 output line

Renamed bookmark main to primary

Tip: run `bookmark list` to verify bookmark state
