src/snapshots/jk__app__tests__snapshot_renders_bookmark_set_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark Set
================

Summary: 1 output line

Moved bookmark main to abcdef12

Tip: run `bookmark list` to verify bookmark state
