src/snapshots/jk__app__tests__snapshot_renders_bookmark_track_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark Track
================

Summary: Started tracking bookmark main@origin

Started tracking bookmark main@origin

Tip: run `bookmark list` to verify bookmark state
