src/snapshots/jk__app__tests__snapshot_renders_bookmark_untrack_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Bookmark Untrack
================

Summary: 1 output line

Stopped tracking bookmark main@origin

Tip: run `bookmark list` to verify bookmark state
