src/snapshots/jk__app__tests__snapshot_renders_commit_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Commit Result
=============

Summary: Working copy now at: abcdef12 commit message

Working copy now at: abcdef12 commit message

Tip: run `show` or `log` to inspect the updated revision
